# skeletal_animation

./: .travis.yml  Cargo.toml  README.md
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: animation.rs  blend_tree.rs  controller.rs  dlb_skinning_150.glslv  dq_skinning_150.glslv  lbs_skinning_150.glslv  lib.rs  manager.rs  math.rs  skeleton.rs  skinned_renderer.rs  skinning_150.glslf  skinning_150.glslv  transform.rs
