[package]

name = "skeletal_animation"
version = "0.6.0"
authors = ["stjahns <s.t.jahns@gmail.com>"]
keywords = ["animation", "character", "skeletal", "gfx", "piston"]
description = "Skeletal character animation library, using gfx-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/skeletal_animation"
homepage = "https://github.com/PistonDevelopers/skeletal_animation"

[lib]

name = "skeletal_animation"
path = "src/lib.rs"

[dependencies]

rustc-serialize = "*"
collada = "0.2.0"
vecmath = "0.2.0"
quaternion = "0.2.0"
dual_quaternion = "0.1.0"
gfx = "0.8.0"
piston-gfx_texture = "0.6.0"
interpolation = "0.1.0"
piston-float = "0.2.0"
gfx_debug_draw = "0.8.0"
