[package]

name = "skeletal_animation"
version = "0.37.0"
authors = ["stjahns <s.t.jahns@gmail.com>"]
keywords = ["animation", "character", "skeletal", "gfx", "piston"]
description = "Skeletal character animation library, using gfx-rs"
license = "MIT"
readme = "README.md"
repository = "https://github.com/PistonDevelopers/skeletal_animation"
homepage = "https://github.com/PistonDevelopers/skeletal_animation"
documentation = "https://docs.rs/skeletal_animation"

[lib]

name = "skeletal_animation"
path = "src/lib.rs"

[dependencies]

rustc-serialize = "0.3.16"
collada = "0.12.0"
vecmath = "1.0.0"
quaternion = "0.4.0"
dual_quaternion = "0.1.0"
gfx = "0.18.1"
piston-gfx_texture = "0.41.0"
interpolation = "0.2.0"
piston-float = "1.0.0"
gfx_debug_draw = "0.26.0"
